--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Xichao Shu"
+title                    : "Xichao Shu Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Xichao Shu"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://XIYUAN0208.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "XIYUAN0208/XIYUAN0208.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xichao Shu"
-  avatar           : "profile.png"
+  avatar           : "photo.png"
   bio              : "Masaryk University"
   location         : "Brno, Czech Republic"
   employer         :
